# wt-starter

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  dbo.db  package-lock.json  wt_config.xml
base-templates/default/: app.xml  auth_strings.xml  calendar.xml  strings.xml
base-templates/stylus/: stylus-flex-and-grid-svgs.xml  tconf-Layout.xml  tconf-accesibility.xml  tconf-backgrounds.xml  tconf-borders.xml  tconf-effects.xml  tconf-filters.xml  tconf-flex-and-grid.xml  tconf-interactivity.xml  tconf-sizing.xml  tconf-spacing.xml  tconf-svg.xml  tconf-tables.xml  tconf-transform.xml  tconf-transition-and-animation.xml  tconf-typography.xml  tconf-variants.xml
dockerfiles/: Dockerfile_build  Dockerfile_deploy
scripts/: build.sh  deploy.sh  docker_builder_images.sh  docker_deploy.sh  test.sh
src/: main.cpp
src/001-App/: App.cpp  App.h
src/002-Dbo/: Session.cpp  Session.h  User.h  UserDetailsModel.cpp  UserDetailsModel.h  UserFormModel.cpp  UserFormModel.h  UserFormView.cpp  UserFormView.h  UserPhotoUploder.cpp  UserPhotoUploder.h  Validators.h
src/002-Dbo/Tables/: CalendarEntry.h  User.cpp  User.h
src/003-Auth/: AuthWidget.cpp  AuthWidget.h  PasswordPromptDialog.cpp  PasswordPromptDialog.h  RegistrationView.cpp  RegistrationView.h  UserFormModel.cpp  UserFormView.cpp  UserFormView.h  UserPhotoUploder.cpp  Validators.h
src/003-Auth/Tables/: User.cpp  User.h
src/004-Settings/: Settings.cpp  Settings.h
src/005-Calendar/: AllEntriesDialog.cpp  AllEntriesDialog.h  Calendar.cpp  Calendar.h  CalendarCell.cpp  CalendarCell.h  EntryDialog.cpp  EntryDialog.h  TimeSuggestions.cpp  TimeSuggestions.h
src/100-Utils/: AwsConnect.cpp  AwsConnect.h  PhotoUpload.cpp  PhotoUpload.h
src/100-Utils/tinyxml2/: tinyxml2.cpp  tinyxml2.h
src/101-Libs/tinyxml2/: tinyxml2.cpp
src/101-Stylus/: Stylus.cpp  Stylus.h  Tables.h  XMLBrain.cpp  XMLBrain.h
src/101-Stylus/ClassChangers/: ColorsWidget.cpp  ColorsWidget.h  ComboBoxClassChanger.cpp  ComboBoxClassChanger.h  SelectionBoxClassChanger.cpp  SelectionBoxClassChanger.h
src/101-Stylus/PanelDialogs/: BaseDialogPanel.cpp  BaseDialogPanel.h  EdditorPanel.cpp  EdditorPanel.h  LeftPanel.cpp  LeftPanel.h  QuickCommandsPanel.cpp  QuickCommandsPanel.h  RightPanel.cpp  RightPanel.h  SettingsPanel.cpp  SettingsPanel.h
src/101-Stylus/Preview/: PElement.cpp  PElement.h  PTree.cpp  PTree.h  PWidget.cpp  PWidget.h
src/101-Stylus/TCategory/: AccesibilityP.cpp  AccesibilityP.h  BackgroundP.cpp  BackgroundP.h  BasePanel.cpp  BasePanel.h  BordersP.cpp  BordersP.h  EffectsP.cpp  EffectsP.h  FiltersP.cpp  FiltersP.h  FlexAndGridP.cpp  FlexAndGridP.h  InteractivityP.cpp  InteractivityP.h  LayoutP.cpp  LayoutP.h  SizingP.cpp  SizingP.h  SpacingP.cpp  SpacingP.h  SvgP.cpp  SvgP.h  TablesP.cpp  TablesP.h  TransformsP.cpp  TransformsP.h  TransitionsAndAnimationP.cpp  TransitionsAndAnimationP.h  TypographyP.cpp  TypographyP.h
src/101-Stylus/Tables/: StylusSettings.h  TemplateApp.h  TemplateFile.h  XmlTemplate.h  XmlTemplates.h
src/101-Stylus/Tailwind/: Base.cpp  Base.h  Category.cpp  Category.h  TailwindConfig.cpp  TailwindConfig.h
static/css/: tailwind-out.css
static/js/: utils.js
tailwind/: package-lock.json  package.json  tailwind-in.css  tailwind.config.js
tailwind/css/: button-classes.css  input-classes.css  override-wt.css  questionmark.css  scroll-bar.css
xml-templates/app/: CvAlex.xml  app-test.xml  app.xml  home.xml  inputs.xml  navbar.xml  settings.xml  strings.xml  stylus-plan.xml  stylus-svgs.xml  test.xml
xml-templates/cv/: app.xml  svg.xml
xml-templates/data-visualization/: app.xml
xml-templates/default/: app.xml  auth.xml  auth_strings.xml  auth_test.xml  calendar.xml  test.xml
xml-templates/overide-wt/: auth.xml  auth_strings.xml  auth_test.xml  test.xml
xml-templates/starter/: app.xml  svg.xml
xml-templates/stylus/: stylus-flex-and-grid-svgs.xml  tconf-Layout.xml  tconf-accesibility.xml  tconf-backgrounds.xml  tconf-borders.xml  tconf-effects.xml  tconf-filters.xml  tconf-flex-and-grid.xml  tconf-interactivity.xml  tconf-sizing.xml  tconf-spacing.xml  tconf-svg.xml  tconf-tables.xml  tconf-transform.xml  tconf-transition-and-animation.xml  tconf-typography.xml  tconf-variants.xml
xml-templates/test/: test.xml
